--- a/app/src/main/res/drawable-v21/avd_medical_center.xml
+++ b/app/src/main/res/drawable-v21/avd_medical_center.xml
@@ -13,37 +13,37 @@
                     android:name="path"
                     android:pathData="M 18 8.371 L 18 24 L 6 24 L 6 8.371 C 6 8.166 6.151 8 6.337 8 L 17.66 8 C 17.849 8 18 8.166 18 8.371 Z"
                     android:fillColor="#00000000"
-                    android:strokeColor="#36B49F"
+                    android:strokeColor="@color/colorAccent"
                     android:strokeWidth="2"/>
                 <path
                     android:name="path_1"
                     android:pathData="M 6 13 L 6 24 L 1 24 L 1 13.335 C 1 13.144 1.172 13 1.376 13 L 6 13 Z"
                     android:fillColor="#00000000"
-                    android:strokeColor="#36B49F"
+                    android:strokeColor="@color/colorAccent"
                     android:strokeWidth="2"/>
                 <path
                     android:name="path_2"
                     android:pathData="M 23 13.335 L 23 24 L 18 24 L 18 13 L 22.63 13 C 22.834 13 23 13.144 23 13.335 Z"
                     android:fillColor="#00000000"
-                    android:strokeColor="#36B49F"
+                    android:strokeColor="@color/colorAccent"
                     android:strokeWidth="2"/>
                 <path
                     android:name="path_3"
                     android:pathData="M 14 18 L 10 18 L 10 24 L 14 24 L 14 18 Z"
                     android:fillColor="#00000000"
-                    android:strokeColor="#36B49F"
+                    android:strokeColor="@color/colorAccent"
                     android:strokeWidth="2"/>
                 <path
                     android:name="path_4"
                     android:pathData="M 14 11 L 14 15"
                     android:fillColor="#00000000"
-                    android:strokeColor="#36B49F"
+                    android:strokeColor="@color/colorAccent"
                     android:strokeWidth="2"/>
                 <path
                     android:name="path_5"
                     android:pathData="M 10 15 L 10 11"
                     android:fillColor="#00000000"
-                    android:strokeColor="#36B49F"
+                    android:strokeColor="@color/colorAccent"
                     android:strokeWidth="2"/>
             </group>
             <group android:name="plus">
@@ -51,13 +51,13 @@
                     android:name="path_6"
                     android:pathData="M 12 0 L 12 6"
                     android:fillColor="#00000000"
-                    android:strokeColor="#36B49F"
+                    android:strokeColor="@color/colorAccent"
                     android:strokeWidth="2"/>
                 <path
                     android:name="path_7"
                     android:pathData="M 9 3 L 15 3"
                     android:fillColor="#00000000"
-                    android:strokeColor="#36B49F"
+                    android:strokeColor="@color/colorAccent"
                     android:strokeWidth="2"/>
             </group>
         </vector>
@@ -123,29 +123,4 @@
             </set>
         </aapt:attr>
     </target>
-
-    <target android:name="path_6">
-        <aapt:attr name="android:animation">
-            <objectAnimator
-                    android:propertyName="strokeColor"
-                    android:duration="400"
-                    android:valueFrom="#36b49f"
-                    android:valueTo="#2196f3"
-                    android:valueType="colorType"
-                    android:interpolator="@android:anim/accelerate_decelerate_interpolator"/>
-        </aapt:attr>
-    </target>
-
-    <target android:name="path_7">
-        <aapt:attr name="android:animation">
-            <objectAnimator
-                    android:propertyName="strokeColor"
-                    android:duration="400"
-                    android:valueFrom="#36b49f"
-                    android:valueTo="#2196f3"
-                    android:valueType="colorType"
-                    android:interpolator="@android:anim/accelerate_decelerate_interpolator"/>
-        </aapt:attr>
-    </target>
-
 </animated-vector>
